--- a/src/Components/Master.css
+++ b/src/Components/Master.css
@@ -1,3 +1,5 @@
+@media (min-width : 1025px) {
+
 #page-container {
     text-align: center;
 }
@@ -93,7 +95,7 @@
 }
 
 #product-container:hover {
-    transform: scale(1.05);
+    transform: scale(1.015);
 }
 
 #product {
@@ -172,3 +174,368 @@
 #logo-gallery:hover {
     transform: scale(1.05);
 }
+
+}
+
+/* @media (max-width : 600px) {
+
+#page-container {
+    text-align: center;
+}
+    
+#logo {
+    width: 30px;
+    height: 35px;
+    padding-top: 30px;
+    transition: 0.5s;
+}
+    
+#logo:hover {
+    transform: scale(1.05);
+}
+    
+#product-gallery {
+    background-color: whitesmoke;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+    
+#title {
+    font-family: Helvetica, sans-serif;
+    font-weight: bolder;
+    font-size: 65px;
+    margin: 0;
+    padding-top: 50px;
+    text-shadow: 0px 0px 4px;
+    }
+    
+#moto {
+    font-family: Helvetica, sans-serif;
+    font-weight: bolder;
+    margin: 0;
+    font-size: 35px;
+    padding-top: 20px;
+    padding-bottom: 5px;
+    text-shadow: 0px 0px 4px;
+    
+}
+    
+#para {
+    font-family: Helvetica, sans-serif;
+    color: grey;
+    font-size: 18px;
+    margin: 0;
+    padding-bottom: 70px;
+    text-shadow: 0px 0px 5px;
+}
+    
+#btn-1 {
+    border-radius: 80px;
+    border-color: white;
+    border-width: 3px;
+    color: whitesmoke;
+    background-color: black;
+    font-family: Helvetica, sans-serif;
+    margin: 0;
+    font-size: 13px;
+    padding: 20px;
+    font-weight: bolder;
+    transition: 0.5s;
+    box-sizing: 0px 20px 50px;
+    text-shadow: 0px 0px 3px;
+}
+    
+#btn-1:hover {
+    background-color: white;
+    color: gray;
+    border-color: gray;
+    transform: scale(1.05);
+}
+    
+#gallery {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding-left: 2%;
+    padding-right: 0%;
+}
+    
+#product-container {
+    text-align: center;
+    border-radius: 20px;
+    background-color: white;
+    border-color: black;
+    margin: 3%;
+    max-width: 43%;
+    box-shadow: 0px 0px 20px;
+    transition: transform 0.5s, box-shadow 0.5s;
+}
+
+#product-container:hover {
+    transform: scale(1.015);
+}
+
+#product {
+    width: 140px;
+    height: 75px;
+    padding-top: 60px;
+}
+
+#product-name {
+    font-family: Helvetica, sans-serif;
+    font-size: 18px;
+    color: black;
+    font-weight: bolder;
+    margin: 0;
+    padding-top: 20px;
+    padding-left: 12%;
+    padding-bottom: 3%;
+    text-align: left;
+    text-shadow: 0px 0px 3px;
+}
+
+#product-details {
+    font-family: Helvetica, sans-serif;
+    font-size: 9px;
+    text-align: left;
+    padding: 12%;
+    margin: 0;
+    padding-top: 0;
+    color: gray;
+}
+
+#to-buy {
+    border-radius: 50px;
+    background-color: whitesmoke;
+    color: black;
+    border-color: black;
+    padding: 2.6%;
+    margin: 5%;
+    margin-bottom: 10%;
+    margin-left: 12%;
+    float: left;
+    font-weight: bold;
+    transition: 0.7s;
+    font-size: 10px;
+}
+
+#more {
+    border-radius: 50px;
+    background-color: black;
+    color: whitesmoke;
+    border-color: black ;
+    padding: 2.5%;
+    margin-top: 4.6%;
+    float: left;
+    margin-bottom: 10%;
+    font-weight: bold;
+    transition: 0.7s;
+    font-size: 10px;
+}
+
+#more:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 5px;
+}
+
+#to-buy:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 5px;
+}
+
+#logo-gallery {
+    width: 30px;
+    height: 35px;
+    padding-top: 30px;
+    transition: 0.5s;
+}
+
+#logo-gallery:hover {
+    transform: scale(1.05);
+}
+
+}
+
+@media (max-width : 400px) {
+
+#page-container {
+    text-align: center;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+    
+#logo {
+    width: 25px;
+    height: 30px;
+    padding-top: 30px;
+    transition: 0.5s;
+}
+    
+#logo:hover {
+    transform: scale(1.05);
+}
+    
+#product-gallery {
+    background-color: whitesmoke;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+    
+#title {
+    font-family: Helvetica, sans-serif;
+    font-weight: bolder;
+    font-size: 50px;
+    margin: 0;
+    padding-top: 50px;
+    text-shadow: 0px 0px 4px;
+    }
+    
+#moto {
+    font-family: Helvetica, sans-serif;
+    font-weight: bolder;
+    margin: 0;
+    font-size: 25px;
+    padding-top: 20px;
+    padding-bottom: 5px;
+    text-shadow: 0px 0px 4px;
+    
+}
+    
+#para {
+    font-family: Helvetica, sans-serif;
+    color: grey;
+    font-size: 13px;
+    margin: 0;
+    padding-bottom: 70px;
+    text-shadow: 0px 0px 5px;
+}
+    
+#btn-1 {
+    border-radius: 80px;
+    border-color: white;
+    border-width: 3px;
+    color: whitesmoke;
+    background-color: black;
+    font-family: Helvetica, sans-serif;
+    margin: 0;
+    font-size: 11px;
+    padding: 20px;
+    font-weight: bolder;
+    transition: 0.5s;
+    box-sizing: 0px 20px 50px;
+    text-shadow: 0px 0px 3px;
+}
+    
+#btn-1:hover {
+    background-color: white;
+    color: gray;
+    border-color: gray;
+    transform: scale(1.05);
+}
+    
+#gallery {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding-left: 2%;
+    padding-right: 0%;
+}
+    
+#product-container {
+    text-align: center;
+    border-radius: 20px;
+    background-color: white;
+    border-color: black;
+    margin: 3%;
+    max-width: 43%;
+    box-shadow: 0px 0px 20px;
+    transition: transform 0.5s, box-shadow 0.5s;
+}
+
+#product-container:hover {
+    transform: scale(1.015);
+}
+
+#product {
+    width: 130px;
+    height: 70px;
+    padding-top: 60px;
+}
+
+#product-name {
+    font-family: Helvetica, sans-serif;
+    font-size: 14px;
+    color: black;
+    font-weight: bolder;
+    margin: 0;
+    padding-top: 20px;
+    padding-left: 12%;
+    padding-bottom: 3%;
+    text-align: left;
+    text-shadow: 0px 0px 3px;
+}
+
+#product-details {
+    font-family: Helvetica, sans-serif;
+    font-size: 7px;
+    text-align: left;
+    padding: 12%;
+    margin: 0;
+    padding-top: 0;
+    color: gray;
+}
+
+#to-buy {
+    border-radius: 50px;
+    background-color: whitesmoke;
+    color: black;
+    border-color: black;
+    padding: 2.6%;
+    margin: 5%;
+    margin-bottom: 10%;
+    margin-left: 12%;
+    float: left;
+    font-weight: bold;
+    transition: 0.7s;
+    font-size: 9px;
+}
+
+#more {
+    border-radius: 50px;
+    background-color: black;
+    color: whitesmoke;
+    border-color: black ;
+    padding: 2.5%;
+    margin-top: 4.6%;
+    float: left;
+    margin-bottom: 10%;
+    font-weight: bold;
+    transition: 0.7s;
+    font-size: 9px;
+}
+
+#more:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 5px;
+}
+
+#to-buy:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 5px;
+}
+
+#logo-gallery {
+    width: 25px;
+    height: 30px;
+    padding-top: 30px;
+    transition: 0.5s;
+}
+
+#logo-gallery:hover {
+    transform: scale(1.05);
+}
+} */
