--- a/src/Components/ProductPage.css
+++ b/src/Components/ProductPage.css
@@ -1,4 +1,4 @@
-@media (min-width : 1025px) {
+@media (max-width : 500px) {
     
 #lists {
     display: flex;
@@ -33,19 +33,19 @@
 }
 
 #product-image {
-    width: 200px;
-    height: 200px;
-    padding-top: 60px;
-    padding-bottom: 20px;
+    width: 120px;
+    height: 120px;
+    padding-top: 25px;
+    padding-bottom: 0px;
 }
 
 #product-name-text {
     font-family: Helvetica, sans-serif;
-    font-size: 30px;
+    font-size: 15px;
     color: black;
     font-weight: bolder;
     margin: 0;
-    padding-top: 20px;
+    padding-top: 15px;
     padding-left: 6%;
     padding-right: 6%;
     padding-bottom: 3%;
@@ -55,7 +55,7 @@
 
 #spec-detail {
     font-family: Helvetica, sans-serif;
-    font-size: 12px;
+    font-size: 6px;
     text-align: left;
     padding: 6%;
     margin: 0;
@@ -75,6 +75,7 @@
     margin-bottom: 10%;
     font-weight: bold;
     transition: 0.7s;
+    font-size: 6px;
 }
 
 #add-to-cart:hover {
@@ -88,12 +89,12 @@
     font-family: Helvetica, sans-serif;
     color: gray;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 6px;
 }
 
 #cart-image {
-    width: 13px;
-    height: 13px;
+    width: 6px;
+    height: 6px;
     margin-left: 10px;
     margin-right: 4px;
 }
@@ -103,8 +104,8 @@
 }
 
 #logo-product {
-    width: 40px;
-    height: 45px;
+    width: 28px;
+    height: 33px;
     padding-top: 30px;
     transition: 0.5s;
 }
@@ -115,7 +116,7 @@
 
 #header {
     font-family: Helvetica, sans-serif;
-    font-size: 60px;
+    font-size: 38px;
     margin: 0;
     margin-top: 3%;
     padding: 0;
@@ -128,7 +129,7 @@
     margin: 0;
     margin-left: 7%;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 15px;
     text-shadow: 0px 0px 3px;
 }
 }
