--- a/src/Components/Master.css
+++ b/src/Components/Master.css
@@ -1,4 +1,4 @@
-@media (max-width : 500px) {
+@media (max-width : 600px) {
 
 #page-container {
     text-align: center;
@@ -24,20 +24,20 @@
 
 #title-box {
     margin: 0;
-    padding: 170px 0 0 0;
+    padding: 65% 0 0 0;
     text-align: center;
 }
 
 #title-box-internal {
     margin: 0 auto;
     padding: 0;
-    max-width: 58%;
+    max-width: 70%;
 }
 
 #title {
     font-family: Helvetica, sans-serif;
     font-weight: bolder;
-    font-size: 75px;
+    font-size: 70px;
     text-shadow: 0px 0px 4px;
     transition: 0.5s;
     padding: 0;
@@ -46,8 +46,8 @@
 }
 
 #title-logo {
-    width: 60px;
-    height: 65px;
+    width: 55px;
+    height: 60px;
     transition: 0.5s;
     padding: 0px 15px 0 0;
 }
@@ -55,7 +55,7 @@
 #para {
     font-family: Helvetica, sans-serif;
     color: grey;
-    font-size: 22px;
+    font-size: 20px;
     margin: 0;
     padding-bottom: 50px;
     padding-top: 15px;
